# agentpy

./: .gitignore  README.md  agent.py  flake.nix  pyproject.toml  run.py
llms/: __init__.py  base.py  chatGPT.py
tools/: __init__.py  hn.py  python_repl.py  search.py
