[tool.poetry]
name = "agentllm"
version = "0.1.0"
description = ""
authors = ["Dennis Al Baihaqi Walangadi <dennis.walangadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "3.8.4"
openai = "0.27.4"
pydantic = "1.9.2"
requests = "2.28.1"
beautifulsoup4 = "^4.12.2"
google-search-results = "^2.4.2"
setuptools = "^67.6.1"
hatchling = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
